<resources>
    <string name="app_name">WhatsUp ChatApp</string>
    <string name="welcome">Welcome to WhatsUp Clone!</string>
    <string name="login_text">Login to Your Account</string>
    <string name="email">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="create_act">Create Account</string>
    <string name="forgot_your_password">Reset Password</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="request_frag">Request Fragment</string>
    <string name="chat_frag">Chat Fragment</string>
    <string name="friends_frag">Friends Fragment</string>
    <string name="update_status">Enter your Status</string>
    <string name="send_request">Send Friend Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
