<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="chatapp.gohool.com.whatsupchatapp.activities.LoginActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@color/colorAccent"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/accountImageProfile"
                android:src="@drawable/chat_icon"
                android:layout_gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">



                <EditText
                    android:id="@+id/accountDisplayNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/display_name"
                    android:textColorHint="#fff"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="14sp" />


                <EditText
                    android:textColorHint="#fff"
                    android:id="@+id/accountEmailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="Enter Email"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#f0f7f4"
                    android:paddingBottom="10dp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="14sp" />


                <EditText
                    android:textColorHint="#fff"
                    android:id="@+id/accountPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="14sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/accountCreateActBtn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:background="@drawable/bt_shape"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/create_account"
                        android:textColor="#d3d3d3"
                        />
                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!--<Button-->
    <!--android:id="@+id/loginFabExitButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignTop="@id/cv"-->
    <!--android:layout_alignEnd="@id/cv"-->
    <!--android:layout_marginEnd="-20dp"-->
    <!--android:layout_marginTop="25dp"-->
    <!--android:src="@drawable/ic_signup"-->
    <!--android:transitionName="loginFab"-->
    <!--/>-->


</RelativeLayout>

